--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -9,28 +9,19 @@
     max-height: 240px;
     overflow-x: scroll;
     overflow-y: hidden;
+    z-index: 2;
 }
 
-.fade_in{
-    opacity: 1;
+.hide_row {
+    opacity: 0;
+}
+
+.fade_row{
     animation-name: fadeInOpacity;
     animation-iteration-count: 1;
     animation-timing-function: ease-in;
-    animation-duration: 2s
-}
-
-.fade_in_section{
-    opacity: 0;
-    transform: translateY(50px);
-    visibility: hidden;
-    transition: opacity 0.6s ease-out, transform 1.2s ease-out;
-    will-change: opacity, visibility
-}
-
-.fade-in-section.is_visible{
-    opacity: 1;
-    transform: none;
-    visibility: visible;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
 }
 
 @keyframes fadeInOpacity {
@@ -50,10 +41,10 @@
     width: 150px;
     height: 200px;
 
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 10px;
-    padding-right: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
 
     cursor: pointer;
 }
